assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Alata&display=swap');

* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    background-color: #222917;
    color: #e1e4cd;
    font-family: Alata, sans-serif;
    padding: 0px;
}

h1 {
    margin-top: 70px;
    font-size: 3rem;
}


.navbar {
    position: fixed;
    width: 100%;
    left: 0;
    top: 0;
    box-shadow: 0 4px 4px #1f2622;
    background-color: antiquewhite;
    z-index: 10;
    overflow: hidden;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
    height: 60px;
}

.nav-menu {
    list-style-type: none;
    font-size: 0.8em;
    padding: 0;
    margin: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100%;
    width: 100%;
}

.nav-menu li {
    display: inline;
    margin: 0 15px;
}

.nav-menu a {
    text-decoration: none;
    color: #4d5d53;
    font-weight: bold;
}

.nav-menu a:hover {
    text-decoration: solid;
}

#main {
    flex: 1 0 auto;
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    width: 100vw;
}

#hero-main {
    background: url("../images/pv-front.jpeg") no-repeat center center/cover;
    position: relative;
    width: 100vw;
    height: 300px;
    /* display: flex;
    align-items: flex-end;
    justify-content: center; */
    border-bottom: 1px solid #1f2622;
    color:rgba(252, 252, 252, 0.1)
}

.drinks {
    background: url("../images/wine-shelves.jpeg") no-repeat center center/cover;
    position: relative;
    width: 100%;
    height: 300px;
    display: flex;
    align-items: flex-end;
    justify-content: center;
    border-bottom: 1px solid #1f2622;
}
#hot-drinks{
    align-content: center;
}
#drinks-menu-block-1{
    width: 50%;
}
#drinks-menu-block-1 h2{
    line-height: 3em;
}
#welcome h1,
#welcome h2,
h3 {
    font-weight: bolder;
    text-align: center;
    width: 100%;
    padding: 1.2em;
}

#pv-welcome {
    font-size: 1em;
    margin: 0 auto;
    padding: 0.5em;
}

#food {
    background-color: #e1e4cd;
    color: #4d5d53;
    text-align: center;
    padding: 20px;
    border-top: 3px solid #000000;
    border-bottom: 1px solid #1f2622;
}

#food-home-img {
    max-width: 10rem;
    width: 10rem;
    padding: 20px;
    border-radius: 15%;
    float: left;
}

#drinks {
    background-color: #fff8de;
    color: #4d5d53;
    padding: 20px;
    text-align: center;
}

#books {
    background-color: #fff8de;
    color: #4d5d53;
    padding: 20px;
    text-align: center;
    border-top: 1px solid #1f2622;
}

/* Menu  */
/* #food-menu-block {
    align-items: center;
} */

.light-menu {
    display: flex;
    flex-direction: column;
    width: 100vw;
    align-items: center;
    justify-content: center;
}
/*
#light-menu,
#food-menu {
    position: relative;
    justify-self: center;
} */
/*
.food {
    width: 80%em;
} */


/*testing grid */
/* .container {
    display: grid;
    grid-template-columns: 80% 20%;
    gap: 10px;
    padding: 20px;
    margin: 1.2rem;
    border-bottom: 1px solid #e1e4cd;
}*/
 .item {
    padding: 5%;
    text-align: center;
    width: 40%;
}


#food-menu-block {
    display: flex;
   justify-content: center;
    /* justify-content: space-between; */
}


h1 {
    text-align: center;
    font-size: 24px;
    margin-bottom: 20px;
}

.item-row {
    display: flex;
    justify-content: space-between;
    margin-bottom: 10px;

}

#light-menu{
    width: 50%;
    padding-right: 10px;
}
#food-sandwiches{
    width: 50%;
    padding-left: 10px;
}
.text-left {
    flex: 1;
    text-align: left;
}

.price {
    flex: 0 0 50px;
    text-align: right;
}

.description {
    flex-basis: 100%;
    font-style: italic;
    font-size: 14px;
    margin-top: -10px;
    margin-bottom: 10px;
}
h1,
p {
    text-align: center;
}

/* feedback */
#feedback-page {
    flex-grow: 1;
    width: 100%;
    padding: 20px 10% 0 10%;
    justify-content: center;
    align-items: center;

}

/* Feedback form*/
#feedback-form {
    border: 2px ridge #fff8de;
    width: 100%;
    border-radius: 5%;
    box-shadow: 0 0 5px rgba(135, 135, 134, 0.4);
    max-width: 500px;
    padding: 5px;
}

.form-item {
    display: flex;
    align-items: center;
    margin-bottom: 10px;
}

.form-item label {
    flex: 1;
    margin-right: 10px;
    text-align: left;
}

.form-item input {
    flex: 2;
    padding: 5px;
    border: 1px solid #fff8de;
    border-radius: 5px;
    width: 100%;
    text-align: right;
}

#comments {
    width: 66%;
    border-radius: 5px;
}

#button-div {
    display: flex;
    justify-content: flex-end;
}

button {
    width: 90px;
    border-radius: 10px;
    box-shadow: 0 0 5px rgba(135, 135, 134, 0.4);
}

button:hover {
    background-color: #4d5d53;
    color: #e1e4cd;
}
#thanks-text{
    border: 1px solid #02180b;
    border-radius: 5px;
    align-self: center;
    text-align: center; box-shadow: 0 0 5px rgba(135, 135, 134, 0.4);
}
#thanks-text h1{
    margin-top: 0;
}
#close {
    border-radius: 5%;
    background-color: #e1e4cd;
    color: #4d5d53;
    box-shadow: 0 0 5px rgba(135, 135, 134, 0.4);
}

/* Footer */
footer {
    text-align: center;
    padding: 20px 0;
    display: flex;
    width: 100%;
    justify-content: flex-end;
}

footer,
ul {
    list-style-type: none;
    justify-content: space-evenly;
    display: flex;
    text-decoration: none;
}
footer ul li{
    text-decoration: none;
}
#social-networks i {
    display: flex;
    flex-direction: row;
    font-size: 160%;
    padding: 5%;
    letter-spacing: 4px;
    color: bisque;
    margin: 0 10px;
    text-decoration: none;
}

@media only screen and (min-width: 768px) {
    #feedback-page {
        padding: 10% 25%;
    }

    body {
        height: 100dvh;
    }

    footer {
        bottom: 0;
        left: 0;
        display: flex;
    }

    #social-networks i {
        display: flex;
        flex-direction: row;
        font-size: 160%;
        padding: 5%;
        letter-spacing: 4px;
        color: bisque;
        margin: 0 100px;
    }
}

